# malloc-checker

./: CMakeLists.txt  README.md
docs/: design.md
plugin/: MallocChecker.cpp  MallocChecker.h
tests/: CMakeLists.txt  run_tests.sh  test_checked.c  test_edge_cases.c  test_malloc_safe.c  test_malloc_unsafe.c  test_unchecked.c
web/: index.html  server.py  start.sh  style.css
